# MathLibrary

./: README.md  TODO.md  build_and_test.sh  compile_commands.json
include/: MathFunctions.h  Matrix.h  Vector.h
src/: CMakeLists.txt  MathFunctions.cpp  Matrix.cpp  Vector.cpp  manualtest.cpp  test.cpp
src/tests/: MatrixTest.cpp  VectorTest.cpp
tests/: VectorTest.cpp
