CMAKE_MINIMUM_REQUIRED(VERSION 3.12)
PROJECT(MathLibrary)
ADD_LIBRARY(MathLib STATIC 
    ${CMAKE_CURRENT_SOURCE_DIR}/Vector.cpp)
ADD_EXECUTABLE(Test EXCLUDE_FROM_ALL 
    ${CMAKE_CURRENT_SOURCE_DIR}/Vector.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/test.cpp)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/../include)